tdf#112177 remove incorrect constraint for Calc function NPER.

Change-Id: I123ea8ee2e333665ac448c6b3814c3bac0b687ab
Reviewed-on: https://gerrit.libreoffice.org/42011
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 003c2cfaa258e204402a366a105366da74e220a2)
Reviewed-on: https://gerrit.libreoffice.org/42047